[package]
name = "shared_canvas"
version = "0.1.0"
authors = ["Andres Kim <andreskim2018@u.northwestern.edu>", "Frank Wang <jinghangwang2018@u.northwestern.edu>", "Jonathan Chan <jonathanchan@u.northwestern.edu>"]

[dependencies]
rgb = "0.8"
ws = "*"
json = "*"
sharing_is_caring = { path = "../server-lib" }
